# Scrapbook

./: .gitignore  .gitmodules  CREDITS.txt  Kconfig  Makefile  Nbuild  README.md  SECURITY-PATCHES.txt  compile_flags.txt  globals.mk  include.ref  scap.ref  scrapbook.mk  scraps.mk  typos.toml
.github/workflows/: README.txt  makefile.yml  pages.yml
C64/: README.txt
GLSL/: Colour_bars.glsl
arduino/: README.txt
arduino/MF-DRV/: MF-DRV.ino
arduino/blink/: blink.ino
asm/x86bootdisk/: .gitignore  Makefile
c/: README.txt
c/XORenc/: CMakeLists.txt  main.c
c/bitmap/: bmp_head.h
c/compiled_c/: config.mk
c/factorial/: CMakeLists.txt  main.c
c/http_server/: CMakeLists.txt  README.md  server.c
c/light_builtins/: README.txt
c/tiny/: CMakeLists.txt  build.sh  hello.c  math.c  tiny.c
c/virtual_hardware/: README.txt
c/weird_loops/: CMakeLists.txt  main.c
c/writing_raw/: CMakeLists.txt  basic.c  hello.c  write.c
c/writing_raw/include/: write.h
doc/: GIT.txt  README.md
doc/Atlas/: welcome.txt
doc/DPX/: README.md
doc/ScrapExplorer/: welcome.txt
doc/make/: README.txt  git.txt
doc/misc/: HEADERS.txt
doc/tools/: JunkRef.txt
ext/: README.md
fortran/: README
fortran-filetest/: file.f90
fortran/filetest/: Makefile  file.f90
fortran/matrix/: Makefile  README  matrix.f90
java/jbuild-testing/: main.java
lab/: sdl2.cpp
lab/FileConstruct/: FileConstructor.java
lab/c/factorial/: CMakeLists.txt  main.c
lab/c/tiny/: math.c  (+5 more)
lab/decomplab/: README.txt
lab/opengl/: CMakeLists.txt
lab/opengl/src/demos/: red.cpp  redanim.cpp
lab/orion/: .gitignore  MOVED  main.py
lab/trail/: CMakeLists.txt  Makefile  README.md
langs/fortran/: add.f90  arguments.f90  file.f90  prime_number.f90
lib/rootGuard/: README  checks.c  checks.h  rootGuard.c  rootGuard.h
linux/dotfiles/: README.txt
linux/sbin/: README.txt
linux/usr/: README.txt
misc/GLSL/: Circle.glsl  Colour_bars_fade.glsl  Gradient.glsl
misc/fortran/: add.f90  arguments.f90  factorial.f90  file.f90  hello_world.f90  matrix.f90  prime_number.f90
misc/plxkit/: utils.py
misc/www/: README.txt
systems/arduino/: README.txt
systems/c64/: poke_screensaver.d64
toolkits/plxkit/: __main__.py  pipe.py  record.py
tools/: MacOpenImHex.sh  README.txt  gh-installdeps.sh  scrapbuild.py
tools/github/: gh-installdeps.sh
tools/reflists/: include.ref  makelist.ref  scap.ref
tools/utils/: PMAP.py
tools/www/: buildpages.py
usr/: Nbuild
usr/Pulse/: CMakeLists.txt
usr/XORenc/: CMakeLists.txt  README.txt  main.c
usr/http_server/: CMakeLists.txt
usr/minifetch/: Makefile  out.sh  pre-run.bottom.sh  pre-run.top.sh
x86bootdisk/: .gitignore  Makefile  README.md
(+198 files in other folders)
