# SPDX-License-Identifier: GPL-3.0
# weird_loops
#
# CMakeLists.txt
#
# COPYRIGHT NOTICE
# Copyright (C) 2025 0x4248 and contributors
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the license is not changed.
#
# This software is free and open source. Licensed under the GNU general
# public license version 3.0 as published by the Free Software Foundation.

project(weird_loops)

add_executable(main main.c)